# Mp3Encoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: LameEncoder.drawio
include/: Directory.h  FileName.h  FileNameStore.h  Mp3Encoder.h  ThreadPool.h  WavFinder.h
lame/: libmp3lame-static.lib  libmp3lame.lib
lib/lame/: libmp3lame-static.lib  libmp3lame.lib
mp3Encoder/: CMakeLists.txt
mp3Encoder/doc/: ClassDiagram.drawio
mp3Encoder/include/: FileName.h  FileNameStore.h  Mp3Encoder.h  WavFinder.h
mp3Encoder/src/: FileName.cpp  FileNameStore.cpp  Mp3Encoder.cpp  WavFinder.cpp
pthreadPool/: CMakeLists.txt
pthreadPool/include/: CondVar.h  Global.h  Mutex.h  Task.h  ThreadPool.h
pthreadPool/src/: CondVar.cpp  Mutex.cpp  Task.cpp  ThreadPool.cpp
src/: Directory.cpp  FileName.cpp  FileNameStore.cpp  Mp3Encoder.cpp  WavFinder.cpp
threadPool/: CMakeLists.txt
threadPool/include/: ThreadPool.h
threadPool/src/: ThreadPool.cpp
